--- a/ui.html
+++ b/ui.html
@@ -370,6 +370,7 @@
       overflow: hidden;
       display: -webkit-box;
       -webkit-line-clamp: 2;
+      line-clamp: 2;
       -webkit-box-orient: vertical;
       outline: none;
       border-radius: 3px;
@@ -414,6 +415,7 @@
       overflow: hidden;
       display: -webkit-box;
       -webkit-line-clamp: 2;
+      line-clamp: 2;
       -webkit-box-orient: vertical;
       outline: none;
       border-radius: 3px;
